--- a/HW4/.vscode/launch.json
+++ b/HW4/.vscode/launch.json
@@ -21,7 +21,7 @@
             "name": "Debug ANTLR4 grammar",
             "type": "antlr-debug",
             "request": "launch",
-            "input": "HelloWorld.txt",
+            "input": "TestWhile.txt",
             "grammar": "Pcl4.g4",
             "startRule": "program",
             "printParseTree": true,
