--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Users\\mcnan\\.vscode\\extensions\\mike-lischke.vscode-antlr4-2.2.4\\antlr\\antlr-4.8-complete.jar"
+        "c:\\Users\\mcnan\\.vscode\\extensions\\mike-lischke.vscode-antlr4-2.2.4\\antlr\\antlr-4.8-complete.jar",
+        "/Users/ian/.vscode/extensions/mike-lischke.vscode-antlr4-2.2.4/antlr/antlr-4.8-complete.jar"
     ]
 }
