--- a/FINAL PROJECT/.vscode/settings.json
+++ b/FINAL PROJECT/.vscode/settings.json
@@ -1,6 +1,47 @@
-{
+
+ {
+    "antlr4.generation": {
+        "mode": "external",
+        "listeners": false,
+        "visitors": true,
+        "outputDir": "antlr4"
+    },
+ 
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "/Users/ian/.vscode/extensions/mike-lischke.vscode-antlr4-2.2.4/antlr/antlr-4.8-complete.jar"
+    ],
+    "antlr4.format": {
+    
+        "alignTrailingComments": false,
+        "allowShortBlocksOnASingleLine": true,
+        "breakBeforeBraces": false,
+        "columnLimit": 100,
+        "continuationIndentWidth": 4,
+        "indentWidth": 4,
+        "keepEmptyLinesAtTheStartOfBlocks": false,
+        "maxEmptyLinesToKeep": 1,
+        "reflowComments": true,
+        "spaceBeforeAssignmentOperators": true,
+        "tabWidth": 4,
+        "useTab": true,
+        "alignColons": "none",
+        "singleLineOverrulesHangingColon": true,
+        "allowShortRulesOnASingleLine": true,
+        "alignSemicolons": "none",
+        "breakBeforeParens": false,
+        "ruleInternalsOnSingleLine": false,
+        "minEmptyLines": 0,
+        "groupedAlignments": true,
+        "alignFirstTokens": false,
+        "alignLexerCommands": false,
+        "alignActions": false,
+        "alignLabels": true,
+        "alignTrailers": false
+    },
+   
+    "antlr4.customcss": null,
+    "notebook.kernelProviderAssociations": [
+    
     ]
 }
