--- a/FINAL PROJECT/.vscode/launch.json
+++ b/FINAL PROJECT/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "Debug ANTLR4 grammar",
             "type": "antlr-debug",
             "request": "launch",
-            "input": "testAssignment.txt",
+            "input": "testComment.txt",
             "grammar": "Segfault.g4",
             "startRule": "program",
-            "printParseTree": true,
+            "printParseTree": false,
             "visualParseTree": true
         }, 
         {
