--- a/FINAL PROJECT/.vscode/launch.json
+++ b/FINAL PROJECT/.vscode/launch.json
@@ -5,21 +5,27 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "CodeLens (Launch) - Pascal",
+            "request": "launch",
+            "mainClass": "Pascal",
+            "projectName": "FINAL PROJECT_93d87252"
+        },
+        {
             "name": "Debug ANTLR4 grammar",
             "type": "antlr-debug",
             "request": "launch",
             "input": "test.txt",
-            "grammar": "Segfault.g4",
+            "grammar": "Segue.g4",
             "startRule": "program",
             "printParseTree": false,
             "visualParseTree": true
-        }, 
+        },
         {
             "type": "java",
             "name": "Debug (Launch) - Current File",
             "request": "launch",
             "mainClass": "${file}"
-        },
-        
+        }
     ]
 }
