--- a/FINAL PROJECT/.vscode/launch.json
+++ b/FINAL PROJECT/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Segue",
+            "request": "launch",
+            "mainClass": "Segue",
+            "projectName": "FINAL PROJECT_c3d8faf8"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Pascal",
             "request": "launch",
             "mainClass": "Pascal",
